--- a/proxy-server/public/index.html
+++ b/proxy-server/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Google Play FEC Project</title>
+<title>WidgetWay Extreme</title>
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
